--- a/InitialProject/InitialProject/View/OwnerAndAccommodationRatingView.xaml
+++ b/InitialProject/InitialProject/View/OwnerAndAccommodationRatingView.xaml
@@ -7,32 +7,56 @@
         mc:Ignorable="d"
         Title="OwnerAndAccommodationRatingView" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="dataGridAccommodations" DockPanel.Dock="Bottom"
+        <DataGrid x:Name="dataGridAccommodationsOld" DockPanel.Dock="Bottom"
                   ItemsSource="{Binding Path=Reservations, UpdateSourceTrigger=PropertyChanged}"
                   SelectedItem="{Binding Path = SelectedReservation, UpdateSourceTrigger=PropertyChanged}"
-                  AutoGenerateColumns="False" IsReadOnly="True" Margin="10,10,278,30">
+                  AutoGenerateColumns="False" IsReadOnly="True" Margin="10,30,261,217" FontSize="20">
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="FontSize" Value="15" />
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding GuestId}" Width="100" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Start date" Binding="{Binding StartDate}" Width="100"></DataGridTextColumn>
-                <DataGridTextColumn Header="End date" Binding="{Binding EndDate}" Width="100"></DataGridTextColumn>
-                <DataGridTextColumn Header="Number of guests" Binding="{Binding GuestNumber}" Width="110"></DataGridTextColumn>
+                <DataGridTextColumn Header="Start date" Binding="{Binding StartDate, StringFormat={}{0:dd/MM/yyyy}}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="End date" Binding="{Binding EndDate, StringFormat={}{0:dd/MM/yyyy}}" Width="100"></DataGridTextColumn>
+                <DataGridTextColumn Header="Number of guests" Binding="{Binding GuestNumber}" Width="130"></DataGridTextColumn>
                 <DataGridTextColumn Header="Stay length" Binding="{Binding DurationDays}" Width="100"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="SelectButton" Content="Select" HorizontalAlignment="Left" Margin="549,10,0,0" VerticalAlignment="Top" Height="54" Width="220" Click="SelectButton_Click" FontSize="23"/>
-        <Button x:Name="RateButton" Content="Rate" HorizontalAlignment="Left" Margin="549,242,0,0" VerticalAlignment="Top" Height="57" Width="220" FontSize="25" Click="RateButton_Click"/>
-        <Button x:Name="CancelButton" Content="Cancel the reservation" HorizontalAlignment="Left" Margin="549,163,0,0" VerticalAlignment="Top" Height="54" Width="217" FontSize="17" RenderTransformOrigin="0.5,0.5" Click="CancelButton_Click">
+        <Button x:Name="SelectButton" Content="Select" HorizontalAlignment="Left" Margin="559,57,0,0" VerticalAlignment="Top" Height="53" Width="220" Click="SelectButton_Click" FontSize="23"/>
+        <Button x:Name="RateButton" Content="Rate" HorizontalAlignment="Left" Margin="559,283,0,0" VerticalAlignment="Top" Height="55" Width="220" FontSize="25" Click="RateButton_Click"/>
+        <Button x:Name="CancelButton" Content="Cancel the reservation" HorizontalAlignment="Left" Margin="559,206,0,0" VerticalAlignment="Top" Height="52" Width="216" FontSize="17" RenderTransformOrigin="0.5,0.5" Click="CancelButton_Click">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
-                    <SkewTransform AngleY="-0.352"/>
-                    <RotateTransform Angle="0.587"/>
+                    <SkewTransform AngleY="0" AngleX="-0.374"/>
+                    <RotateTransform Angle="0.229"/>
                     <TranslateTransform Y="-0.549"/>
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="MoveButon" Content="Reschedule a reservation" HorizontalAlignment="Left" Margin="549,86,0,0" VerticalAlignment="Top" Height="55" Width="220" FontSize="17" Click="MoveButon_Click"/>
-        <Button x:Name="GoBackButton" Content="Go back" HorizontalAlignment="Left" Margin="549,326,0,0" VerticalAlignment="Top" Height="57" Width="220" FontSize="25" Click="GoBackButton_Click"/>
+        <Button x:Name="MoveButon" Content="Reschedule a reservation" HorizontalAlignment="Left" Margin="559,131,0,0" VerticalAlignment="Top" Height="53" Width="220" FontSize="17" Click="MoveButon_Click"/>
+        <Button x:Name="GoBackButton" Content="Go back" HorizontalAlignment="Left" Margin="559,365,0,0" VerticalAlignment="Top" Height="55" Width="220" FontSize="25" Click="GoBackButton_Click"/>
+        <DataGrid x:Name="dataGridAccommodationsNew"
+            ItemsSource="{Binding Reservations, UpdateSourceTrigger=PropertyChanged}"
+            SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}"
+            AutoGenerateColumns="False" IsReadOnly="True" Margin="10,256,261,0" FontSize="20">
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="FontSize" Value="15" />
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Binding="{Binding GuestId}" Width="100" />
+                <DataGridTextColumn Header="Start date" Binding="{Binding StartDate, StringFormat={}{0:dd/MM/yyyy}}" Width="100"/>
+                <DataGridTextColumn Header="End date" Binding="{Binding EndDate, StringFormat={}{0:dd/MM/yyyy}}" Width="100"/>
+                <DataGridTextColumn Header="Number of guests" Binding="{Binding GuestNumber}" Width="130"/>
+                <DataGridTextColumn Header="Stay length" Binding="{Binding DurationDays}" Width="100"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Label Content="Old reservations:&#xD;" HorizontalAlignment="Left" Margin="10,223,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="Upcoming reservations:&#xA;" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="20"/>
 
     </Grid>
 </Window>
