--- a/InitialProject/InitialProject/View/RenovationSuggestionView.xaml
+++ b/InitialProject/InitialProject/View/RenovationSuggestionView.xaml
@@ -1,20 +1,18 @@
-﻿<Window x:Class="InitialProject.View.GuestView"
+﻿<Window x:Class="InitialProject.View.RenovationSuggestionView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InitialProject.View"
         mc:Ignorable="d"
-        Title="GuestView" Height="470" Width="810">
+        Title="RenovationSuggestionView" Height="450" Width="800">
     <Grid>
-        <Label Content="WELCOME BACK!" HorizontalAlignment="Left" Margin="37,33,0,0" VerticalAlignment="Top" Height="54" Width="343" FontSize="40"/>
-        <Label Content="Where would you like to go?" HorizontalAlignment="Left" Margin="37,133,0,0" VerticalAlignment="Top" Height="46" Width="343" FontSize="25"/>
-        <Image HorizontalAlignment="Left" Height="149" Margin="591,33,0,0" VerticalAlignment="Top" Width="166"/>
-        <Button HorizontalAlignment="Left" Margin="37,330,0,0" VerticalAlignment="Top" Height="78" Width="343" Click="Button_Click_1" Content="Surprise me" FontSize="20"/>
-        <Button Content="Search" HorizontalAlignment="Left" Margin="37,219,0,0" VerticalAlignment="Top" Height="81" Width="343" FontSize="20" Click="Button_Click_2"/>
-        <Button Content="Profile" HorizontalAlignment="Left" Margin="420,330,0,0" VerticalAlignment="Top" Height="78" Width="345" FontSize="20" Click="Button_Click_3"/>
-        <Button Content="Reservations" HorizontalAlignment="Left" VerticalAlignment="Top" Height="81" Width="343" Click="Button_Click" Margin="422,219,0,0" FontSize="20"/>
-        <Button Content="?" Margin="405,15,362,403" FontSize="25" Click="Button_Click_1">
+        <Label Content="What things would you renovate/change in this accommodation?" HorizontalAlignment="Center" Margin="0,28,0,0" VerticalAlignment="Top" Height="57" Width="742" FontSize="25"/>
+        <TextBox x:Name="SuggestionTextBox" HorizontalAlignment="Left" Margin="76,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="605" Height="107" FontSize="20"/>
+        <Label Content="How urgent is it?" HorizontalAlignment="Left" Margin="29,217,0,0" VerticalAlignment="Top" Height="52" Width="213" FontSize="25"/>
+        <TextBox x:Name="LevelTextBox" HorizontalAlignment="Left" Margin="76,269,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="166" Height="52" FontSize="20"/>
+        <Label Content="What scale is this?" HorizontalAlignment="Left" Margin="510,220,0,0" VerticalAlignment="Top" Height="49" Width="224" FontSize="25"/>
+        <Button Content="?" Margin="595,269,147,113" FontSize="25" Click="Button_Click_1">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Grid>
@@ -42,6 +40,7 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
+        <Button Content="Submit" HorizontalAlignment="Left" Margin="246,359,0,0" VerticalAlignment="Top" Height="65" Width="264" FontSize="25" Click="Button_Click"/>
 
     </Grid>
 </Window>
