--- a/InitialProject/InitialProject/View/Tourist/CreateTourRequest.xaml
+++ b/InitialProject/InitialProject/View/Tourist/CreateTourRequest.xaml
@@ -39,10 +39,10 @@
         <Label Content="City" FontSize="14" HorizontalAlignment="Left" Margin="474,218,0,0" VerticalAlignment="Top"/>
         <Label Content="Country" FontSize="14" HorizontalAlignment="Left" Margin="448,252,0,0" VerticalAlignment="Top"/>
         
-        <TextBox HorizontalAlignment="Left" Margin="525,223,0,0" TextWrapping="Wrap" Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="525,257,0,0" TextWrapping="Wrap" Text="{Binding Path=Country, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Margin="491,316,0,0" TextWrapping="Wrap" Text="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="189" Height="60"/>
-        <TextBox HorizontalAlignment="Left" Margin="525,417,0,0" TextWrapping="Wrap" Text="{Binding Path=TourLanguage, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="CityTextBox" LostFocus="CityTextBox_OnLostFocus" HorizontalAlignment="Left" Margin="525,223,0,0" TextWrapping="Wrap" Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="CountryTextBox" LostFocus="CountryTextBox_OnLostFocus" HorizontalAlignment="Left" Margin="525,257,0,0" TextWrapping="Wrap" Text="{Binding Path=Country, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="DescriptionTextBox" LostFocus="DescriptionTextBox_OnLostFocus" HorizontalAlignment="Left" Margin="491,316,0,0" TextWrapping="Wrap" Text="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="189" Height="60"/>
+        <TextBox Name="LanguageTextBox" LostFocus="LanguageTextBox_OnLostFocus" HorizontalAlignment="Left" Margin="525,417,0,0" TextWrapping="Wrap" Text="{Binding Path=TourLanguage, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="120"/>
         
         <Label Content="Number of Tourists" FontWeight="Bold" FontSize="20" HorizontalAlignment="Left" Margin="313,596,0,0" VerticalAlignment="Top" Height="42" Width="195"/>
         
