--- a/InitialProject/InitialProject/View/Guest/RenovationSuggestionView.xaml
+++ b/InitialProject/InitialProject/View/Guest/RenovationSuggestionView.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InitialProject.View"
         mc:Ignorable="d"
-        Title="RenovationSuggestionView" Height="450" Width="800">
+        Title="Renovation suggestion" Height="450" Width="800" Background="Lavender" >
     <Grid>
-        <Label Content="What things would you renovate/change in this accommodation?" HorizontalAlignment="Center" Margin="0,28,0,0" VerticalAlignment="Top" Height="57" Width="742" FontSize="25"/>
-        <TextBox x:Name="SuggestionTextBox" HorizontalAlignment="Left" Margin="76,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="605" Height="107" FontSize="20"/>
-        <Label Content="How urgent is it?" HorizontalAlignment="Left" Margin="29,217,0,0" VerticalAlignment="Top" Height="52" Width="213" FontSize="25"/>
-        <TextBox x:Name="LevelTextBox" HorizontalAlignment="Left" Margin="76,269,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="166" Height="52" FontSize="20"/>
-        <Label Content="What scale is this?" HorizontalAlignment="Left" Margin="510,220,0,0" VerticalAlignment="Top" Height="49" Width="224" FontSize="25"/>
+        <Label Content="What things would you renovate/change in this accommodation?" HorizontalAlignment="Center" Margin="0,28,0,0" VerticalAlignment="Top" Height="57" Width="742" FontSize="25" FontFamily="Bahnschrift Light" />
+        <TextBox x:Name="SuggestionTextBox" HorizontalAlignment="Left" Margin="76,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="605" Height="107" FontSize="20" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
+        <Label Content="How urgent is it?" HorizontalAlignment="Left" Margin="29,217,0,0" VerticalAlignment="Top" Height="52" Width="213" FontSize="25" FontFamily="Bahnschrift Light" />
+        <TextBox x:Name="LevelTextBox" HorizontalAlignment="Left" Margin="76,269,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="166" Height="52" FontSize="20" Background="Gainsboro" FontFamily="Bahnschrift Light"/>
+        <Label Content="What scale is this?" HorizontalAlignment="Left" Margin="510,220,0,0" VerticalAlignment="Top" Height="49" Width="224" FontSize="25" FontFamily="Bahnschrift Light"/>
         <Button Content="?" Margin="595,269,147,113" FontSize="25" Click="Button_Click_1">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
@@ -21,11 +21,11 @@
                             <Ellipse.Fill>
                                 <RadialGradientBrush>
                                     <GradientStop Offset="0"  
-                                        Color="White" />
+                                        Color="Gainsboro" />
                                     <GradientStop Offset="1"  
-                                        Color="White" />
+                                        Color="Gainsboro" />
                                     <GradientStop Offset="1"  
-                                        Color="White" />
+                                        Color="Gainsboro" />
                                     <RadialGradientBrush.Transform>
                                         <TransformGroup>
                                             <ScaleTransform ScaleY="0.65" />
@@ -40,7 +40,10 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <Button Content="Submit" HorizontalAlignment="Left" Margin="246,359,0,0" VerticalAlignment="Top" Height="65" Width="264" FontSize="25" Click="Button_Click"/>
+        <Button Content="Submit" HorizontalAlignment="Left" Margin="246,359,0,0" VerticalAlignment="Top" Height="65" Width="264" FontSize="25" FontFamily="Bahnschrift Light" Click="Button_Click_2"/>
+        <Label Content="B - GO BACK ON
+PREVIOUS PAGE
+" HorizontalAlignment="Left" Margin="556,403,0,0" VerticalAlignment="Top" FontSize="15" FontFamily="Bahnschrift Light"/>
 
     </Grid>
 </Window>
